--- a/examples/package.json
+++ b/examples/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "prototype.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "nodemon --watch src/index.ts --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
